--- a/Flashcards/On the flip side/task-info.yaml
+++ b/Flashcards/On the flip side/task-info.yaml
@@ -219,6 +219,70 @@ files:
     }, 30000)
 
   learner_created: false
+- name: src/style/main.css
+  visible: true
+  text: |-
+    body {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+        max-width: 100vw;
+        background: url(../images/world.png) no-repeat fixed;
+        background-origin: border-box;
+        background-size: cover;
+        font-family: "Roboto", "Helvetica Neue", sans-serif;
+    }
+
+    header {
+        min-height: content-box;
+        font-size: 4rem;
+    }
+
+    #title {
+        font-weight: 900;
+        font-size: 4rem;
+        margin: 0 0 1rem 0;
+        background: #1a6762;
+        border: 1px solid #1a6762;
+        border-radius: 1rem;
+        padding: .25rem 1.25rem;
+        text-align: center;
+
+    }
+
+    #board {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-gap: 10px;
+        justify-content: center;
+    }
+
+    .question {
+        background: #1a6762;
+        border: 1px solid #1f292e;
+
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: flex-start;
+        align-items: center;
+
+        width: 10vmax;
+        height: 10vmax;
+        padding: .5rem;
+        border-radius: 5px;
+        overflow: auto;
+    }
+
+    .question p {
+        font-size: 1rem;
+        margin: 0;
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/115/stages/627/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Thu, 30 Jun 2022 23:23:50 UTC
 record: -1
